<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faculty_Home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>
        <item
            android:id="@+id/nav_faculty_students_list"
            android:title="@string/student_list"
            android:icon="@drawable/student_icon"/>
        <item
            android:id="@+id/nav_faculty_take_attendance"
            android:title="@string/take_attendance"
            android:icon="@drawable/take_attendance_icon"/>
        <item
            android:id="@+id/nav_faculty_view_attendance"
            android:icon="@drawable/view_attendance_icon"
            android:title="@string/view_attendance" />

        <item android:id="@+id/nev_faculty_change_password"
            android:icon="@drawable/change_passwod_icon"
            android:title="@string/change_password"/>
    </group>
    <!--    use to perform action like toast or intent-->
    <!--        nested menu for showing divider line-->
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_faculty_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_icon"/>
        </menu>
    </item>

</menu>