<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    tools:showIn="navigation_view">-->
    <!--    this menu added in stu_nev_drawer_layout-->
    <!--        use to launch the fragment-->
    <!--        single because user only able to select-1-->
    <!--        add icons of items-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>
        <item
            android:id="@+id/nav_view_attendance"
            android:title="@string/view_attendance"
            android:icon="@drawable/view_attendance_icon"/>

        <item android:id="@+id/nev_change_password"
            android:icon="@drawable/change_passwod_icon"
            android:title="@string/change_password"/>
    </group>
    <!--    use to perform action like toast or intent-->
    <!--        nested menu for showing divider line-->
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_icon"/>
        </menu>
    </item>
</menu>