<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Students.ChangePasswordFragment">-->
    <!-- TODO: Update blank fragment layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Students.ChangePasswordFragment">

    <TextView
        android:id="@+id/old_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/old_pass_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/new_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_password"
        android:layout_marginTop="10dp"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/m_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_pass_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/Confirm_new_PassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/m_new_password"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Confirm_new_PassText"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/new_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button"
        android:padding="10dp"
        android:text="@string/change_password" />
</RelativeLayout>

    <!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/Change_password_fragment" />-->
<!--</FrameLayout>-->